--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                             <option value="16" class="left">16</option>
                                             <option value="17" class="left">17</option>
                                             <option value="18" class="left">18</option>
-                                            <option value="19" class="left">19</option>
+                                            <!-- <option value="19" class="left">19</option>
                                             <option value="20" class="left">20</option>
                                             <option value="21" class="left">21</option>
                                             <option value="22" class="left">22</option>
@@ -172,7 +172,7 @@
                                             <option value="24" class="left">24</option>
                                             <option value="25" class="left">25</option>
                                             <option value="26" class="left">26</option>
-                                            <option value="0" class="left">0</option>
+                                            <option value="0" class="left">0</option> -->
                                         </select>
                                     </div>
                                 </div>
@@ -306,168 +306,168 @@
             switch (icono) {
                 case 1:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje1.png?raw=true`;
+                        `/images/personaje1.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter.png?raw=true`;
+                        `/images/caracter.png`;
                     console.log("uno");
 
                     break;
                 case 2:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje1_H.png?raw=true`;
+                        `/images/personaje1_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter_H.png?raw=true`;
+                        `/images/caracter_H.png`;
                     console.log("dos");
                     break;
                 case 3:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje2.png?raw=true`;
+                        `/images/personaje2.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter2.png?raw=true`;
+                        `/images/caracter2.png`;
                     break;
                 case 4:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje2_H.png?raw=true`;
+                        `/images/personaje2_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter2_H.png?raw=true`;
+                        `/images/caracter2_H.png`;
                     break;
                 case 5:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje3.png?raw=true`;
+                        `/images/personaje3.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter3.png?raw=true`;
+                        `/images/caracter3.png`;
                     break;
                 case 6:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje3_H.png?raw=true`;
+                        `/images/personaje3_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter3_H.png?raw=true`;
+                        `/images/caracter3_H.png`;
                     break;
                 case 7:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje4.png?raw=true`;
+                        `/images/personaje4.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter4.png?raw=true`;
+                        `/images/caracter4.png`;
                     break;
                 case 8:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje4_H.png?raw=true`;
+                        `/images/personaje4_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter4_H.png?raw=true`;
+                        `/images/caracter4_H.png`;
                     break;
                 case 9:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje5.png?raw=true`;
+                        `/images/personaje5.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter5.png?raw=true`;
+                        `/images/caracter5.png`;
                     break;
                 case 10:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje5_H.png?raw=true`;
+                        `/images/personaje5_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter5_H.png?raw=true`;
+                        `/images/caracter5_H.png`;
                     break;
                 case 11:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje6.png?raw=true`;
+                        `/images/personaje6.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter6.png?raw=true`;
+                        `/images/caracter6.png`;
                     break;
                 case 12:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje6_H.png?raw=true`;
+                        `/images/personaje6_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter6_H.png?raw=true`;
+                        `/images/caracter6_H.png`;
                     break;
                 case 13:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje7.png?raw=true`;
+                        `/images/personaje7.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter7.png?raw=true`;
+                        `/images/caracter7.png`;
                     break;
                 case 14:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje7_H.png?raw=true`;
+                        `/images/personaje7_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter7_H.png?raw=true`;
+                        `/images/caracter7_H.png`;
                     break;
                 case 15:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje8.png?raw=true`;
+                        `/images/personaje8.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter8.png?raw=true`;
+                        `/images/caracter8.png`;
                     break;
                 case 16:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje8_H.png?raw=true`;
+                        `/images/personaje8_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter8_H.png?raw=true`;
+                        `/images/caracter8_H.png`;
                     break;
                 case 17:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje9.png?raw=true`;
+                        `/images/personaje9.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter9.png?raw=true`;
+                        `/images/caracter9.png`;
                     break;
                 case 18:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje9_H.png?raw=true`;
+                        `/images/personaje9_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter9_H.png?raw=true`;
+                        `/images/caracter9_H.png`;
                     break;
                 case 19:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje10.png?raw=true`;
+                        `/images/personaje10.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter10.png?raw=true`;
+                        `/images/caracter10.png`;
                     break;
                 case 20:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje10_H.png?raw=true`;
+                        `/images/personaje10_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter10_H.png?raw=true`;
+                        `/images/caracter10_H.png`;
                     break;
                 case 21:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje11.png?raw=true`;
+                        `/images/personaje11.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter11.png?raw=true`;
+                        `/images/caracter11.png`;
                     break;
                 case 22:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje11_H.png?raw=true`;
+                        `/images/personaje11_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter11_H.png?raw=true`;
+                        `/images/caracter11_H.png`;
                     break;
                 case 23:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje12.png?raw=true`;
+                        `/images/personaje12.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter12.png?raw=true`;
+                        `/images/caracter12.png`;
                     break;
                 case 24:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje12_H.png?raw=true`;
+                        `/images/personaje12_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter12_H.png?raw=true`;
+                        `/images/caracter12_H.png`;
                     break;
                 case 25:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje13.png?raw=true`;
+                        `/images/personaje13.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter13.png?raw=true`;
+                        `/images/caracter13.png`;
                     break;
                 case 26:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje13_H.png?raw=true`;
+                        `/images/personaje13_H.png`;
                     ava2 =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/caracter13_H.png?raw=true`;
+                        `/images/caracter13_H.png`;
                     break;
                 case 0:
                     ava =
-                        `https://github.com/marcoC76/RCC-PM/blob/master/images/personaje0.png?raw=true`;
+                        `/images/personaje0.png`;
                     ava2 =
-                        ` https://github.com/marcoC76/RCC-PM/blob/master/images/caracter0.png?raw=true`;
+                        ` /images/caracter0.png`;
                     break;
 
                 default:
