--- a/index.html
+++ b/index.html
@@ -306,168 +306,168 @@
             switch (icono) {
                 case 1:
                     ava =
-                        `/images/personaje1.png`;
+                        `images/personaje1.png`;
                     ava2 =
-                        `/images/caracter.png`;
+                        `images/caracter.png`;
                     console.log("uno");
 
                     break;
                 case 2:
                     ava =
-                        `/images/personaje1_H.png`;
+                        `images/personaje1_H.png`;
                     ava2 =
-                        `/images/caracter_H.png`;
+                        `images/caracter_H.png`;
                     console.log("dos");
                     break;
                 case 3:
                     ava =
-                        `/images/personaje2.png`;
+                        `images/personaje2.png`;
                     ava2 =
-                        `/images/caracter2.png`;
+                        `images/caracter2.png`;
                     break;
                 case 4:
                     ava =
-                        `/images/personaje2_H.png`;
+                        `images/personaje2_H.png`;
                     ava2 =
-                        `/images/caracter2_H.png`;
+                        `images/caracter2_H.png`;
                     break;
                 case 5:
                     ava =
-                        `/images/personaje3.png`;
+                        `images/personaje3.png`;
                     ava2 =
-                        `/images/caracter3.png`;
+                        `images/caracter3.png`;
                     break;
                 case 6:
                     ava =
-                        `/images/personaje3_H.png`;
+                        `images/personaje3_H.png`;
                     ava2 =
-                        `/images/caracter3_H.png`;
+                        `images/caracter3_H.png`;
                     break;
                 case 7:
                     ava =
-                        `/images/personaje4.png`;
+                        `images/personaje4.png`;
                     ava2 =
-                        `/images/caracter4.png`;
+                        `images/caracter4.png`;
                     break;
                 case 8:
                     ava =
-                        `/images/personaje4_H.png`;
+                        `images/personaje4_H.png`;
                     ava2 =
-                        `/images/caracter4_H.png`;
+                        `images/caracter4_H.png`;
                     break;
                 case 9:
                     ava =
-                        `/images/personaje5.png`;
+                        `images/personaje5.png`;
                     ava2 =
-                        `/images/caracter5.png`;
+                        `images/caracter5.png`;
                     break;
                 case 10:
                     ava =
-                        `/images/personaje5_H.png`;
+                        `images/personaje5_H.png`;
                     ava2 =
-                        `/images/caracter5_H.png`;
+                        `images/caracter5_H.png`;
                     break;
                 case 11:
                     ava =
-                        `/images/personaje6.png`;
+                        `images/personaje6.png`;
                     ava2 =
-                        `/images/caracter6.png`;
+                        `images/caracter6.png`;
                     break;
                 case 12:
                     ava =
-                        `/images/personaje6_H.png`;
+                        `images/personaje6_H.png`;
                     ava2 =
-                        `/images/caracter6_H.png`;
+                        `images/caracter6_H.png`;
                     break;
                 case 13:
                     ava =
-                        `/images/personaje7.png`;
+                        `images/personaje7.png`;
                     ava2 =
-                        `/images/caracter7.png`;
+                        `images/caracter7.png`;
                     break;
                 case 14:
                     ava =
-                        `/images/personaje7_H.png`;
+                        `images/personaje7_H.png`;
                     ava2 =
-                        `/images/caracter7_H.png`;
+                        `images/caracter7_H.png`;
                     break;
                 case 15:
                     ava =
-                        `/images/personaje8.png`;
+                        `images/personaje8.png`;
                     ava2 =
-                        `/images/caracter8.png`;
+                        `images/caracter8.png`;
                     break;
                 case 16:
                     ava =
-                        `/images/personaje8_H.png`;
+                        `images/personaje8_H.png`;
                     ava2 =
-                        `/images/caracter8_H.png`;
+                        `images/caracter8_H.png`;
                     break;
                 case 17:
                     ava =
-                        `/images/personaje9.png`;
+                        `images/personaje9.png`;
                     ava2 =
-                        `/images/caracter9.png`;
+                        `images/caracter9.png`;
                     break;
                 case 18:
                     ava =
-                        `/images/personaje9_H.png`;
+                        `images/personaje9_H.png`;
                     ava2 =
-                        `/images/caracter9_H.png`;
+                        `images/caracter9_H.png`;
                     break;
                 case 19:
                     ava =
-                        `/images/personaje10.png`;
+                        `images/personaje10.png`;
                     ava2 =
-                        `/images/caracter10.png`;
+                        `images/caracter10.png`;
                     break;
                 case 20:
                     ava =
-                        `/images/personaje10_H.png`;
+                        `images/personaje10_H.png`;
                     ava2 =
-                        `/images/caracter10_H.png`;
+                        `images/caracter10_H.png`;
                     break;
                 case 21:
                     ava =
-                        `/images/personaje11.png`;
+                        `images/personaje11.png`;
                     ava2 =
-                        `/images/caracter11.png`;
+                        `images/caracter11.png`;
                     break;
                 case 22:
                     ava =
-                        `/images/personaje11_H.png`;
+                        `images/personaje11_H.png`;
                     ava2 =
-                        `/images/caracter11_H.png`;
+                        `images/caracter11_H.png`;
                     break;
                 case 23:
                     ava =
-                        `/images/personaje12.png`;
+                        `images/personaje12.png`;
                     ava2 =
-                        `/images/caracter12.png`;
+                        `images/caracter12.png`;
                     break;
                 case 24:
                     ava =
-                        `/images/personaje12_H.png`;
+                        `images/personaje12_H.png`;
                     ava2 =
-                        `/images/caracter12_H.png`;
+                        `images/caracter12_H.png`;
                     break;
                 case 25:
                     ava =
-                        `/images/personaje13.png`;
+                        `images/personaje13.png`;
                     ava2 =
-                        `/images/caracter13.png`;
+                        `images/caracter13.png`;
                     break;
                 case 26:
                     ava =
-                        `/images/personaje13_H.png`;
+                        `images/personaje13_H.png`;
                     ava2 =
-                        `/images/caracter13_H.png`;
+                        `images/caracter13_H.png`;
                     break;
                 case 0:
                     ava =
-                        `/images/personaje0.png`;
+                        `images/personaje0.png`;
                     ava2 =
-                        ` /images/caracter0.png`;
+                        ` images/caracter0.png`;
                     break;
 
                 default:
