--- a/index.html
+++ b/index.html
@@ -201,10 +201,12 @@
                             <div class="nes-select is-dark">
                                 <select id="Grupo" required onchange="grupo(this.value)">
                                     <option value="" disabled selected>Escoge un grupo...</option>
-                                    <option value="A">4°A</option>
-                                    <option value="B">4°B</option>
-                                    <option value="C">4°C</option>
-                                    <option value="D">4°D</option>
+                                    <option value="A">1°A</option>
+                                    <option value="B">1°B</option>
+                                    <option value="C">1°C</option>
+                                    <option value="D">1°D</option>
+                                    <option value="E">1°E</option>
+                                    <option value="F">1°F</option>
                                 </select>
                             </div>
                             <br>
@@ -652,8 +654,8 @@
                 document.getElementById("form").innerHTML = salida;
                 document.getElementById("avatar2-2").src = ava2;
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
-                    width: 300,
-                    height: 300
+                    width: 200,
+                    height: 200
                 });
                 function makeCode() {
                     var elText = document.getElementById("text");
